--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vir's Website</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Particles.js Library -->
+    <!-- Particles.js -->
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <!-- Simple Icons CDN for social icons -->
+    <!-- Icons -->
     <script src="https://cdn.jsdelivr.net/npm/simple-icons@v12/icons/twitter.svg"></script>
 </head>
 <body>
@@ -50,7 +50,7 @@
                 <hr class="divider">
             </section>
 
-            <!-- Connect / Social Links -->
+            <!-- Connections -->
             <section class="section">
                 <h2 class="section-title">CONNECT</h2>
                 <div class="social-grid">
@@ -63,7 +63,7 @@
                 <hr class="divider">
             </section>
 
-            <!-- Discord Status (Real Widget) -->
+            <!-- Discord Status -->
             <section class="section">
                 <h2 class="section-title">DISCORD STATUS</h2>
                 <div class="discord-widget">
@@ -85,7 +85,7 @@
         </div>
     </main>
 
-    <!-- Particles.js Initialization -->
+    <!-- Particles.js -->
     <script>
         particlesJS("particles-js", {
             "particles": {
